assets/css/style.css
/* ... */
/* Styling for the first paragraph*/
.container {
  padding-left: 0;
  padding-right: 0;
  margin:0;
}

.row {
  background-color: var(--background-color3);
}

.intro {
  background-image: url(../images/stone-background.jpeg);
  padding-left: 10px;
}

#bio {
  padding: 20px 50px;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 19px;
  text-align: center; 
  height: max-content;
  line-height: 50px;
  margin: auto;
}

#smoothie, #vagus-nerve {
  width:100%;
  object-fit: cover;
}

/* Beginning styling for the three steps section*/

  .threesteps {
    background-color: var(--background-color3);
    text-align: center;
    padding: 50px;
  }
  
  .process {
    position: relative;
    z-index: 1;
  }
  
  #steps {
    padding: 10px 10px;
    justify-content: center;
    text-align: center;
    display: inline;
  }

  #steps img {
    object-fit: contain;
    width: 113px;
    height: 113px;
  }

  .coaching {
    background-color: var(--button-color1);
    border: none;
    color: white;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    cursor: pointer;
    padding: 0.75rem 5rem;
    border-radius: 20px;
  }

  #coaching {
    margin: 50px 0 100px 0;
  }

  .footer {
    background-color: var(--background-color1);
    color: white;
    text-align: center;
    padding: 100px 30px 0;
  }

  .e-book {
    background-color: var(--e-book-color);
    text-align: center;
    padding: 75px 0;
  }

  .download {
    background-color: var(--button-color1);
    border: none;
    color: white;
    padding: 20px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    cursor: pointer;
    padding: 0.75rem 5rem;
    border-radius: 20px;
    justify-content: center;
  }
  
  #e-book {
    text-decoration: none;
  }
  
  button:hover {
    color: black;
  }

  .py-5 {
    padding: 0px !important;
  }


  /* About.html css*/

  #about-me, #my-struggles {
    padding: 0px 0px 0px 0px;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 18px;
    text-align: left; 
    height: max-content;
    margin: auto;
    width: 100%;    
  }

  #about-me h2, #about-me p,
  #my-struggles h2, #my-struggles p {
    padding: 50px 50px 0;
  }

  div #about-me >img,  div #my-struggles > img{
    padding: 0;
    margin: auto;
    max-width: 100%;
  }




  /* ------------------------------------Start of Media Queries----------------------------------------------- */

@media screen and (min-width: 768px)  {
    
      
    header {
      padding: 0 0 0 1rem;
    }
    
    nav {
      display: block;
      position: relative;
      box-shadow: none;
      width: fit-content;
      padding-right: 1rem;
    }

    ul {
      margin-bottom: 0;
    }

    #menu {
      display: flex;
    }

    #menu > li {
      padding-left: 1rem;
      font-size: small;
      align-items: center;
    }

    #title h1 {
      font-size: 30px;
    }
    
    .nav-toggle-label {
      display: none;
    }

    main {
      /* Make main element take up surplus space*/
      flex: 1 0 auto;
      margin-top: 45px; 
    }
    /*
    #top-padding {
      padding-top: 50px;
    }*/
    
    p{
      font-size: var(--tablet-p);
    }
  
    h1 {
      font-size: var(--phone-texth1);
    }
  
    h2 {
      font-size: var(--phone-texth2);
    }
    
    h3 {
      font-size: var(--phone-texth3);
    }
  
   h4 {
      font-size: var(--phone-texth4);
    }

    #bio p {
        padding: 0px 7px;
        line-height: 20px;
      }

      /*about.html css*/
      #about-me h2, #about-me p,
      #my-struggles h2, #my-struggles p {
        padding: 20px 20px;
      }

      #about-me > h2,
      #my-struggles > h2 {
        font-size: 20px;
      }

      #about-me p,
      #my-struggles p {
        font-size: 14px
      }
  }

  @media screen and (min-width: 992px)  {
    #menu a:hover {
      border-bottom: 1px solid white;
      color: white;
    }

  }


  @media (max-width: 767px) and (min-width: 200px)  {
    #slogan {
      font-size: 12px;
    }
    
    #bio {
        padding: 10px 0px 10px 10px;
      }
    
    p {
      font-size: var(--phone-text);
    }  

    h1 {
      font-size: var(--phone-texth1);
    }

    h2 {
      font-size: var(--phone-texth2);
    }

    h3 {
      font-size: var(--phone-texth3);
    }

    h4 {
      font-size: var(--phone-texth4);
    }

    #bio p {
      line-height: normal;
      margin-bottom: 0.5rem;
    }

    #steps img {
      max-width: 75%;
      max-height: 75%;
    }

    .process {
      margin-top: 0.5rem;
    }

    .footer {
      padding-top: 30px;
    }

    .footer p {
      font-size: 0.7rem;
    }

    .footer h5 {
      font-size: 0.9rem;
    }

    #coaching {
      margin: 10px 0 20px 0;
    }


    .coaching, .download {
      padding: 0.25rem 1rem;
      font-size: var(--phone-texth4);
    }

    .e-book {
      padding: 50px 20px;
    }

    .form-control, .btn {
      font-size: 0.5rem;
    }

    /* About.html css*/
    #about-me,
    #my-struggles {
      width: 50%;
    }

    #about-me h2,
    #my-struggles h2 {
      padding: 10px 10px 0px 7px;
      font-size: 8px;
      line-height: normal;
    }

    #about-me p,
    #my-struggles p {
      padding: 0px 20px 0px 7px;
      font-size: 8px;
      line-height: normal;
    }

    #about-me > img,
    #my-struggles > img {
      width: 100%;
    }

  }



  /*---------------------Imported Footer styling---------------------------*/
.btn-primary {
    background-color: var(--button-color1);
  }
  
  
  
  .bd-placeholder-img {
          font-size: 1.125rem;
          text-anchor: middle;
          -webkit-user-select: none;
          -moz-user-select: none;
          user-select: none;
        }
  
        @media (min-width: 768px) {
          .bd-placeholder-img-lg {
            font-size: 3.5rem;
          }
        }
/* ... */

